--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=ElectionManagementSystem
+spring.datasource.url=jdbc:postgresql://localhost/electionManagementSystem
+spring.jpa.hibernate.ddl-auto=create
+spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-file-size=10MB
