--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
 spring.application.name=ElectionManagementSystem
-spring.datasource.url=jdbc:postgresql://localhost/electionManagementSystem
+spring.datasource.url=jdbc:postgresql://localhost/election_management_system
 spring.jpa.hibernate.ddl-auto=create
 spring.config.import=secrets.properties
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.database-platform=org.hibernate.database.PostgreSQLDialect
