--- a/src/main/resources/secrets.properties
+++ b/src/main/resources/secrets.properties
@@ -1,6 +1,2 @@
-spring.datasource.username=postgres
-<<<<<<< HEAD
-spring.datasource.password=Lt*08161554409
-=======
-spring.datasource.password=Baliqis
->>>>>>> a2e483af9c77f7fb0526c5d3d34db9d3e8a1e96b
+spring.datasource.username = postgres
+spring.datasource.password = 1234Joeking92$%
