--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=ElectionManagementSystem
-spring.datasource.url=jdbc:postgresql://localhost/electionManagementSystem
+spring.datasource.url=jdbc:postgresql://localhost:5432/electionManagementSystem
 spring.jpa.hibernate.ddl-auto=create
 spring.config.import=secrets.properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
