--- a/src/main/resources/secrets.properties
+++ b/src/main/resources/secrets.properties
@@ -1,3 +1,3 @@
 spring.datasource.username=postgres
-spring.datasource.password=Lt*08161554409
+spring.datasource.password=Password
 spring.datasource.driver-class-name=org.postgresql.Driver
