--- a/src/main/resources/secrets.properties
+++ b/src/main/resources/secrets.properties
@@ -1,2 +1,3 @@
-spring.datasource.username = postgres
-spring.datasource.password = Baliqis
+spring.datasource.username =postgres
+spring.datasource.password =joseph45.
+
