--- a/src/main/resources/secrets.properties
+++ b/src/main/resources/secrets.properties
@@ -1,3 +1,2 @@
-spring.datasource.username =postgres
-spring.datasource.password =joseph45.
-
+spring.datasource.username = postgres
+spring.datasource.password = Baliqis
