--- a/src/main/resources/secrets.properties
+++ b/src/main/resources/secrets.properties
@@ -1,4 +1,4 @@
 spring.datasource.username = postgres
-spring.datasource.password = password
-spring.mail.username=gloebudav@gmail.com
-spring.mail.password=pgwe gfcd bpyh choj
+spring.datasource.password = Baliqis
+spring.mail.username=sulaimabaliqis@gmail.com
+spring.mail.password=uirn lokn mlid ghiu
