--- a/src/main/resources/secrets.properties
+++ b/src/main/resources/secrets.properties
@@ -1,4 +1,4 @@
 spring.datasource.username = postgres
-spring.datasource.password = password
-spring.mail.username=gloebudav@gmail.com
-spring.mail.password=pgwe gfcd bpyh choj
+spring.datasource.password = Lt*08161554409
+spring.mail.username=lawaltoheeb36@gmail.com
+spring.mail.password=irba fqkz wirc jcgu
