--- a/src/main/resources/secrets.properties
+++ b/src/main/resources/secrets.properties
@@ -1,4 +1,5 @@
 spring.datasource.username = postgres
-spring.datasource.password = Lt*08161554409
-spring.mail.username=lawaltoheeb36@gmail.com
-spring.mail.password=irba fqkz wirc jcgu
+spring.datasource.password = joseph45.
+spring.mail.username=ajiogeh@gmail.com
+spring.mail.password=ssro qfxf hgyg vexp
+
