Me_I_Dont_Understand_AI_Method

--- a/src/main/resources/secrets.properties
+++ b/src/main/resources/secrets.properties
@@ -1,5 +1,5 @@
 spring.datasource.username = postgres
-spring.datasource.password = joseph45.
+spring.datasource.password = password
 spring.mail.username=ajiogeh@gmail.com
 spring.mail.password=ssro qfxf hgyg vexp
 
