--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
+/src/main/resources/secrets.properties
 
 ### VS Code ###
 .vscode/
